--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"wpackagist-plugin/developer"            : "~1",
 		"squizlabs/php_codesniffer": "^3.5",
 		"wp-coding-standards/wpcs": "^2.2",
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.6.0"
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
+		"wpackagist-plugin/developer-toolbar": "^1.0"
 	},
 	"extra"       : {
 		"wordpress-install-dir": "public/wp",
