--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		"composer/composer": "^1.9"
 	},
 	"require-dev" : {
-		"wpackagist-plugin/regenerate-thumbnails": "*@dev",
+		"wpackagist-plugin/regenerate-thumbnails": "^3.1",
 		"wpackagist-plugin/developer"            : "~1",
 		"squizlabs/php_codesniffer": "^3.5",
 		"wp-coding-standards/wpcs": "^2.2",
