--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"wp-cli/wp-cli": "^2.4",
 		"wpackagist-plugin/w3-total-cache": "^0.12.0",
 		"composer/semver": "^1.5",
-		"composer/composer": "^1.9"
+		"composer/composer": "^1.9",
+		"wpackagist-plugin/json-feed": "^1.3"
 	},
 	"require-dev" : {
 		"wpackagist-plugin/regenerate-thumbnails": "^3.1",
@@ -24,7 +25,8 @@
 		"squizlabs/php_codesniffer": "^3.5",
 		"wp-coding-standards/wpcs": "^2.2",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
-		"wpackagist-plugin/developer-toolbar": "^1.0"
+		"wpackagist-plugin/developer-toolbar": "^1.0",
+		"symfony/var-dumper": "^4"
 	},
 	"extra"       : {
 		"wordpress-install-dir": "public/wp",
