--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,27 @@
 			"url" : "https://wpackagist.org"
 		}
 	],
+	"config": {
+		"sort-packages": true
+	},
 	"require"     : {
+		"composer/composer": "^1.9",
+		"composer/semver": "^1.5",
 		"johnpbloch/wordpress": "~5.2",
 		"timber/timber": "^1.14",
 		"vlucas/phpdotenv": "^4.1",
 		"wp-cli/wp-cli": "^2.4",
-		"wpackagist-plugin/w3-total-cache": "^0.12.0",
-		"composer/semver": "^1.5",
-		"composer/composer": "^1.9",
-		"wpackagist-plugin/json-feed": "^1.3"
+		"wpackagist-plugin/json-feed": "^1.3",
+		"wpackagist-plugin/w3-total-cache": "^0.13.0"
 	},
 	"require-dev" : {
-		"wpackagist-plugin/regenerate-thumbnails": "^3.1",
-		"wpackagist-plugin/developer"            : "~1",
-		"squizlabs/php_codesniffer": "^3.5",
-		"wp-coding-standards/wpcs": "^2.2",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.6.0",
+		"squizlabs/php_codesniffer": "^3.5",
+		"symfony/var-dumper": "~4.4",
+		"wp-coding-standards/wpcs": "^2.2",
+		"wpackagist-plugin/developer": "~1",
 		"wpackagist-plugin/developer-toolbar": "^1.0",
-		"symfony/var-dumper": "^4"
+		"wpackagist-plugin/regenerate-thumbnails": "^3.1"
 	},
 	"extra"       : {
 		"wordpress-install-dir": "public/wp",
