--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 	"require"     : {
 		"composer/composer": "^1.9",
 		"composer/semver": "^1.5",
+		"cweagans/composer-patches": "^1.6",
 		"johnpbloch/wordpress": "~5.2",
 		"timber/timber": "^1.14",
 		"vlucas/phpdotenv": "^4.1",
