--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://wpackagist.org"
+            "url": "https://wpackagist.org",
+            "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
         }
     ],
     "config": {
